--- a/recipe.HTML
+++ b/recipe.HTML
@@ -10,20 +10,22 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            
         }
+        
         header {
-            background-color: #333;
-            color: #fff;
+            background-color: green;
+            color: black;
             padding: 20px;
             text-align: center;
         }
         nav {
-            background-color: #555;
+            background-color: greenyellow;
             padding: 10px;
             text-align: center;
         }
         nav a {
-            color: #fff;
+            color: black;
             text-decoration: none;
             margin: 0 10px;
             cursor: pointer; /* Add cursor pointer to indicate clickable */
@@ -64,10 +66,6 @@
     <section id="recipeSection">
         <!-- ここに編集可能な内容を表示します -->
     </section>
-
-    <footer>
-        <p>あなただけのレシピサイトを</p>
-    </footer>
 
     <script>
         window.onload = function() {
