--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         
         h2 {
-            background-color: #333;
+            background-color: green;
             color: #fff;
             padding: 20px;
             text-align: center;
